--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #E3C059;
+    --primary-color: #B8860B;
     /* Darker Gold for Contrast */
     --secondary-color: #ddbf65;
     /* Dark Goldenrod */
