Fix services page icons and button hover color

--- a/css/variables.css
+++ b/css/variables.css
@@ -3,6 +3,8 @@
     /* Darker Gold for Contrast */
     --secondary-color: #ddbf65;
     /* Dark Goldenrod */
+    --accent-color: #d4af37;
+    /* Accent Gold */
     --dark-color: #333333;
     /* Dark Grey */
     --light-color: #f8f8f8;
