--- a/css/variables.css
+++ b/css/variables.css
@@ -1,5 +1,6 @@
 :root {
-    --primary-color: #B8860B;
+    --primary-color: #5B7586;
+    /* --primary-color: #B8860B; */
     /* Darker Gold for Contrast */
     --secondary-color: #ddbf65;
     /* Dark Goldenrod */
