--- a/css/variables.css
+++ b/css/variables.css
@@ -1,6 +1,5 @@
 :root {
-    --primary-color: #5B7586;
-    /* --primary-color: #B8860B; */
+    --primary-color: #B8860B;
     /* Darker Gold for Contrast */
     --secondary-color: #ddbf65;
     /* Dark Goldenrod */
